# pl2html

./: README.md  pyproject.toml
pl2html/: __init__.py  compiler.py  formats.py  styles.py
tests/: __init__.py  conftest.py  test__init__.py  test_compiler.py  test_formats.py  test_normalizer.py  test_style.py
tests/testdata/: test_basic_table_compilation.html  test_data_color_auto_contrast_switching.html  test_data_color_nan_values.html  test_dynamic_attributes_preserve_numeric_context.html  test_float_rounding_and_formatting.html  test_format_overrides_custom_expressions.html  test_integer_thousands_separator.html  test_large_float_thousands_separator.html  test_rank_color_interpolation.html  test_styled_output_generation.html  test_temporal_columns_handling.html  test_to_html_evaluates_styles_before_formatters.html
